--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     Homework 1
     <ul>
       <li>
-      	<a href="http://teach.park.edu/~asobirkhonov/cs240/hw/hw1/parkEquineCenter.html">Park Equine Center</a>
+      	<a href="../hw/hw1/parkEquineCenter.html">Park Equine Center</a>
       </li>
       <li>
       	<a href="http://teach.park.edu/~asobirkhonov/cs240/hw/hw1/drugsRUs.html">Drugs-R-Us</a>
