--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       	<a href="/hw/hw1/parkEquineCenter.html">Park Equine Center</a>
       </li>
       <li>
-      	<a href="http://teach.park.edu/~asobirkhonov/cs240/hw/hw1/drugsRUs.html">Drugs-R-Us</a>
+      	<a href="/hw/hw1/drugsRUs.html">Drugs-R-Us</a>
       </li>
     </ul>
   </li>
@@ -33,7 +33,7 @@
     Homework 2
     <ul>
       <li>
-      	<a href="http://teach.park.edu/~asobirkhonov/cs240/hw/hw2/pgmExplanation.html">Program Explanation</a>
+      	<a href="/hw/hw2/pgmExplanation.html">Program Explanation</a>
       </li>
     </ul>
   </li>
@@ -41,13 +41,13 @@
     Homework 3
     <ul>
       <li>
-      	<a href="http://teach.park.edu/~asobirkhonov/cs240/hw/hw3/parkAdvertising.html">Park Website Advertising</a>
+      	<a href="/hw/hw3/parkAdvertising.html">Park Website Advertising</a>
       </li>
       <li>
-      	<a href="http://teach.park.edu/~asobirkhonov/cs240/hw/hw3/programmingQuotes.html">Programming Quotes</a>
+      	<a href="/hw/hw3/programmingQuotes.html">Programming Quotes</a>
       </li>
       <li>
-      	<a href="http://teach.park.edu/~asobirkhonov/cs240/hw/hw3/song1.html">Song #1</a>
+      	<a href="/hw/hw3/song1.html">Song #1</a>
       </li>
     </ul>
   </li>
@@ -55,7 +55,7 @@
     Homework 4
     <ul>
       <li>
-      	<a href="http://teach.park.edu/~asobirkhonov/cs240/hw/hw4/pope.html">Pope Francis</a>
+      	<a href="/hw/hw4/pope.html">Pope Francis</a>
       </li>
     </ul>
   </li>
@@ -63,7 +63,7 @@
     Homework 5
     <ul>
       <li>
-      	<a href="http://teach.park.edu/~asobirkhonov/cs240/hw/hw5/InvoiceForm.html">Invoice Form</a>
+      	<a href="/hw/hw5/InvoiceForm.html">Invoice Form</a>
       </li>
     </ul>
   </li>
@@ -71,7 +71,7 @@
     Homework 6
     <ul>
       <li>
-      	<a href="http://teach.park.edu/~asobirkhonov/cs240/hw/hw6/animals.html">Animal Alphabet</a>
+      	<a href="/hw/hw6/animals.html">Animal Alphabet</a>
       </li>
     </ul>
   </li>
