--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   These are my CS 240 Homework projects. However, since I am hosting it through GitHub, it won't show any JavaScript, Images, files or ASP.NET codes. Github allows only HTML files to be shown
 </h1>
 <h3>I have uploaded my CS 322 homework projects into github which has ASP.NET and JavaScrip with SQL files, to view, simply download files and open them on your browser</h3>
-<h4>here is the link: <a href="https://github.com/Jonakesh/CS-322-Web-Development-2-Homework-Projects"CS-322-Web-Development-2-Homework-Projects</a></h4> 
+<h4>here is the link: <a href="https://github.com/Jonakesh/CS-322-Web-Development-2-Homework-Projects">CS-322-Web-Development-2-Homework-Projects</a></h4> 
 <ul>
   <li>
     Homework 1
