--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
 
 <body>
 <h1>
-  Akrom S<br>
-  These are my CS 240 Homework projects. However, since I am hosting it through GitHub, it won't show any JavaScript, Images, files or ASP.NET codes. Github allows only HTML files to be shown
+  Akrom S portfolio<br>
 </h1>
-<h3>I have uploaded my CS 322 homework projects into github which has ASP.NET 
-  and JavaScrip with SQL files, to view, simply download files and open them on your browser</h3>
-<h5>here is the link: 
-  <a href="https://github.com/Jonakesh/CS-322-Web-Development-2-Homework-Projects">CS-322-Web-Development-2-Homework-Projects</a></h5> 
+<h4>I have uploaded my projects into webhost instead of Github because Github doesn't support JavaScrip, SQL and ASP.NET.
+</h4>
+<h5>here are the link:
+  <a href="https://teach.park.edu/~asobirkhonov/HW4/emailAddress.aspx">Email Address generator</a>
+  <a href="https://teach.park.edu/~asobirkhonov/HW5/bpaverage.aspx">Blood pressure average</a>
+  <a href="https://teach.park.edu/~asobirkhonov/HW6/biographies.aspx">Biographies shopping cart</a>
+  <a href="https://teach.park.edu/~asobirkhonov/HW6/cooking.aspx">Cooking shopping cart</a>
+  <a href="https://teach.park.edu/~asobirkhonov/HW2/seesaw.html">Seesaw</a>
+  <a href="https://github.com/Jonakesh/CS-322-Web-Development-2-Homework-Projects">CS-322-Web-Development-2-Homework-Projects</a>
+</h5> 
 <ul>
+  <h5>
+    Below are my older projects
+  </h5>
   <li>
     Homework 1
     <ul>
