--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 </h1>
 <h4>I have uploaded my projects into webhost instead of Github because Github doesn't support JavaScrip, SQL and ASP.NET.
 </h4>
-<h5>here are the link:
-  <a href="https://teach.park.edu/~asobirkhonov/HW4/emailAddress.aspx">Email Address generator</a>
-  <a href="https://teach.park.edu/~asobirkhonov/HW5/bpaverage.aspx">Blood pressure average</a>
-  <a href="https://teach.park.edu/~asobirkhonov/HW6/biographies.aspx">Biographies shopping cart</a>
-  <a href="https://teach.park.edu/~asobirkhonov/HW6/cooking.aspx">Cooking shopping cart</a>
-  <a href="https://teach.park.edu/~asobirkhonov/HW2/seesaw.html">Seesaw</a>
-  <a href="https://github.com/Jonakesh/CS-322-Web-Development-2-Homework-Projects">CS-322-Web-Development-2-Homework-Projects</a>
+<h5>here are the link:<br>
+  <a href="https://teach.park.edu/~asobirkhonov/HW4/emailAddress.aspx">Email Address generator</a><br>
+  <a href="https://teach.park.edu/~asobirkhonov/HW5/bpaverage.aspx">Blood pressure average</a><br>
+  <a href="https://teach.park.edu/~asobirkhonov/HW6/biographies.aspx">Biographies shopping cart</a><br>
+  <a href="https://teach.park.edu/~asobirkhonov/HW6/cooking.aspx">Cooking shopping cart</a><br>
+  <a href="https://teach.park.edu/~asobirkhonov/HW2/seesaw.html">Seesaw</a><br>
+  <a href="https://github.com/Jonakesh/CS-322-Web-Development-2-Homework-Projects">CS-322-Web-Development-2-Homework-Projects</a><br><br>
 </h5> 
+<h5>
+  Below are my older projects
+</h5>
 <ul>
-  <h5>
-    Below are my older projects
-  </h5>
   <li>
     Homework 1
     <ul>
