--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     Homework 1
     <ul>
       <li>
-      	<a href="/hw/hw1/parkEquineCenter.html">Park Equine Center</a>
+      	<a href="https://teach.park.edu/~asobirkhonov/cs240/hw/hw1/parkEquineCenter.html">Park Equine Center</a>
       </li>
       <li>
-      	<a href="/hw/hw1/drugsRUs.html">Drugs-R-Us</a>
+      	<a href="https://teach.park.edu/~asobirkhonov/cs240/hw/hw1/drugsRUs.html">Drugs-R-Us</a>
       </li>
     </ul>
   </li>
@@ -45,7 +45,7 @@
     Homework 2
     <ul>
       <li>
-      	<a href="/hw/hw2/pgmExplanation.html">Program Explanation</a>
+      	<a href="https://teach.park.edu/~asobirkhonov/cs240/hw/hw2/pgmExplanation.html">Program Explanation</a>
       </li>
     </ul>
   </li>
@@ -53,13 +53,13 @@
     Homework 3
     <ul>
       <li>
-      	<a href="/hw/hw3/parkAdvertising.html">Park Website Advertising</a>
+      	<a href="https://teach.park.edu/~asobirkhonov/cs240/hw/hw3/parkAdvertising.html">Park Website Advertising</a>
       </li>
       <li>
-      	<a href="/hw/hw3/programmingQuotes.html">Programming Quotes</a>
+      	<a href="https://teach.park.edu/~asobirkhonov/cs240/hw/hw3/programmingQuotes.html">Programming Quotes</a>
       </li>
       <li>
-      	<a href="/hw/hw3/song1.html">Song #1</a>
+      	<a href="https://teach.park.edu/~asobirkhonov/cs240/hw/hw3/song1.html">Song #1</a>
       </li>
     </ul>
   </li>
@@ -67,7 +67,7 @@
     Homework 4
     <ul>
       <li>
-      	<a href="/hw/hw4/pope.html">Pope Francis</a>
+      	<a href="https://teach.park.edu/~asobirkhonov/cs240/hw/hw4/pope.html">Pope Francis</a>
       </li>
     </ul>
   </li>
@@ -75,7 +75,7 @@
     Homework 5
     <ul>
       <li>
-      	<a href="/hw/hw5/InvoiceForm.html">Invoice Form</a>
+      	<a href="https://teach.park.edu/~asobirkhonov/cs240/hw/hw5/InvoiceForm.html">Invoice Form</a>
       </li>
     </ul>
   </li>
@@ -83,7 +83,18 @@
     Homework 6
     <ul>
       <li>
-      	<a href="/hw/hw6/animals.html">Animal Alphabet</a>
+      	<a href="https://teach.park.edu/~asobirkhonov/cs240/hw/hw6/animals.html">Animal Alphabet</a>
+      </li>
+    </ul>
+  </li>
+  <li>
+    Homework 7
+    <ul>
+      <li>
+      	<a href="https://teach.park.edu/~asobirkhonov/cs240/hw/hw7/favorites.html">Favorite TV Shows</a>
+      </li>
+      <li>
+      	<a href="https://teach.park.edu/~asobirkhonov/cs240/hw/hw7/sentenceBuilder.html">Sentence Builder</a>
       </li>
     </ul>
   </li>
